@@ -1,105 +1,93 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cl.aspor</groupId>
     <artifactId>aspor-certificacion-automation</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
-        <!-- Lombok -->
+        <!-- Selenium -->
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
-            <scope>provided</scope>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.20.0</version>
         </dependency>
-
-        <!-- Test dependencies (ejemplo con JUnit) -->
+        
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.10.2</version>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.6.2</version>
+    </dependency>
+
+        <!-- Cucumber -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.14.0</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
+        <!-- JUnit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>  
+          <dependency>
+		      <groupId>com.aventstack</groupId>
+		      <artifactId>extentreports</artifactId>
+		      <version>5.0.9</version>
+		      <scope>test</scope>
+    	  </dependency>
+    		<dependency>
+			    <groupId>com.fasterxml.jackson.core</groupId>
+			    <artifactId>jackson-core</artifactId>
+			    <version>2.16.1</version> <!-- Usa una versión acorde a tu selenium -->
+			</dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+    		<groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.24.3</version>
+		</dependency>
+		
+			<dependency>
+			    <groupId>org.slf4j</groupId>
+			    <artifactId>slf4j-simple</artifactId>
+			    <version>2.0.13</version>
+			    <scope>test</scope>
+			</dependency>	
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		    <version>2.24.3</version>
+		</dependency>		
+    </dependencies>
     <build>
         <plugins>
-            <!-- Plugin de compilación -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <fork>true</fork>
-                            <compilerArgs>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>default-testCompile</id>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                        <configuration>
-                            <fork>true</fork>
-                            <compilerArgs>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                <arg>--add-exports</arg>
-                                <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </execution>
-                </executions>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <encoding>UTF-8</encoding>
+                    <includes>
+                        <include>**/TestRunner.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
